--- a/public/a/c/screen.css
+++ b/public/a/c/screen.css
@@ -636,7 +636,7 @@ figure a:hover img {
     float: none; }
 
   .grid-block img {
-    margin: 0 auto 10px !important;
+    margin: 0 auto 0 !important;
     width: 90%; }
 
   figure {
@@ -645,7 +645,10 @@ figure a:hover img {
   .figcaption {
     position: relative !important;
     width: 90% !important;
-    margin: 0 auto 10px; } }
+    margin: 0 auto 10px; }
+
+  img + .caption, img + .figcaption {
+    margin-top: 0px; } }
 .block-caption {
   -webkit-transition: all 0.16s linear;
   -moz-transition: all 0.16s linear;
@@ -799,7 +802,7 @@ figure a:hover img {
 -------------------------------------------*/
 .about .hero {
   margin-top: -76px;
-  padding-top: 104px; }
+  padding-top: 35px; }
 
 .carousel {
   margin-bottom: 2.52101%; }
@@ -1132,9 +1135,15 @@ header {
 .search-wrap {
   margin-top: 121px; }
 
+.search-wrap.case-studies {
+  margin-top: 0; }
+
 @media (max-width: 768px) {
   .search-wrap {
-    margin-top: 0px; } }
+    margin-top: 0px; }
+
+  .search-wrap.case-studies {
+    margin-top: 20px; } }
 @media (min-width: 768px) and (max-width: 979px) {
   .search-wrap {
     margin-top: 155px; } }
